# commpy

./: .pre-commit-config.yaml  README.md  setup.cfg
.github/workflows/: pre-commit.yml  pytest.yml
src/commpy/: comm.py
test/: test_cli.py  test_comm.py
