[metadata]
name = commpy
version = 0.0.2
description = comm
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mikepqr/commpy
author = Mike Lee Williams
author_email = mike@mike.place
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: End Users/Desktop
    Topic :: Utilities
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
keywords = twitter
project_urls =
    Bug Reports=https://github.com/mikepqr/commpy/issues
    Source=https://github.com/mikepqr/commpy

[options]
package_dir = =src
packages = find:
python_requires = >=3.11
install_requires =
    typer

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    commpy=commpy.comm:app
